# LMWN-data-platform-assignment

./: README.md  pyproject.toml
assignment_1/: README.md  item1.py
assignment_2/: README.md  architecture_diagram.md  cost_analysis.md  docker-compose.yml
assignment_2/airflow/dags/: iceberg_etl_dag.py
assignment_2/etl/: etl_iceberg.py
assignment_2/k8s/: hive-metastore.yaml  minio.yaml  prometheus-pod.yaml  trino.yaml
assignment_2/metastore/: hive-site.xml
assignment_2/secrets/: docker-secrets.env
assignment_2/spark/: spark-defaults.conf
assignment_2/trino/: iceberg.properties
problem_1/: README.md  item1.py
problem_2/: .env.example  Makefile  README.md  docker-compose.yml
problem_2/airflow/: Dockerfile
problem_2/airflow/dags/: iceberg_etl_dag.py
problem_2/docker-compose/templates/: airflow-cm1-configmap.yaml  airflow-deployment.yaml  airflow-service.yaml  grafana-deployment.yaml  grafana-service.yaml  hive-metastore-cm0-configmap.yaml  hive-metastore-deployment.yaml  hive-metastore-service.yaml  metastore-db-deployment.yaml  minio-deployment.yaml  minio-init-deployment.yaml  minio-service.yaml  prometheus-cm1-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml  spark-cm0-configmap.yaml  spark-deployment.yaml  trino-cm0-configmap.yaml  (+2 more)
problem_2/etl/: etl_iceberg.py
problem_2/k8s/: airflow.yaml  grafana.yaml  minio.yaml  spark.yaml
problem_2/monitoring/: prometheus.yml
problem_2/scripts/: extract_airflow_creds.ps1
problem_2/spark/: Dockerfile  entrypoint.sh
problem_2/trino/: config.properties  jvm.config  node.properties
(+146 files in other folders)
